--- a/serverless.yml
+++ b/serverless.yml
@@ -70,7 +70,7 @@ stepFunctions:
     stateMachines:
         hellostep1:
           events:
-            - s3: alxorwell
+            - s3: amxorwell
           definition:
               Comment: "Step 1 in state machine"
               StartAt: StartExecution
@@ -84,7 +84,7 @@ stepFunctions:
 # you can add CloudFormation resource templates here
 resources:
   Resources:
-    S3Bucketalxorwell:
+    S3Bucketamxorwell:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: alm-orwell-processing
