--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: aws-python # NOTE: update this with your service name
+service: bucket-processing # NOTE: update this with your service name
 
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
@@ -20,10 +20,15 @@ service: aws-python # NOTE: update this with your service name
 provider:
   name: aws
   runtime: python2.7
-
-# you can overwrite defaults here
   stage: dev
   region: us-east-1
+  iamRoleStatements:
+    - Effect: "Allow"
+      Action:
+        - "states:StartExecution"
+      Resource:
+        - "*"
+
 
 # you can add statements to the Lambda function's IAM Role here
 iamRoleStatements:
@@ -42,24 +47,16 @@ iamRoleStatements:
     Resource:
       - "*"
 
-# you can define service wide environment variables here
-#  environment:
-#    variable1: value1
-
-# you can add packaging information here
-#package:
-#  include:
-#    - include-me.py
-#    - include-me-dir/**
-#  exclude:
-#    - exclude-me.py
-#    - exclude-me-dir/**
-
-
 functions:
-  startExecution:
+  execute:
+    handler: stepfunctions.execute
+    events:
+      - s3: alm-orwell-processing
+    environment:
+      statemachine_arn: ${self:resources.Outputs.MyStateMachine.Value}
+  hello:
     handler: handler.hello
-
+  
 #    Define function environment variables here
 #    environment:
 #      variable2: value2
@@ -68,31 +65,28 @@ functions:
 
 stepFunctions:
     stateMachines:
-        hellostep1:
-          events:
-            - s3: alxorwell
+        hellostepfunc:
+          name: myStateMachine
           definition:
               Comment: "Step 1 in state machine"
-              StartAt: StartExecution
+              StartAt: HelloWorld1
               States:
-                StartExecution:
+                HelloWorld1:
                   Type: Task
-                  Resource: "arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:${self:service}-${opt:stage}-startExecution"
+                  Resource: "arn:aws:lambda:#{AWS::Region}:#{AWS::AccountId}:function:${self:service}-${opt:stage}-hello"
                   End: true
 
 
 # you can add CloudFormation resource templates here
 resources:
+  Outputs:
+    MyStateMachine:
+      Description: "Description for the statemachine"
+      Value:
+        Ref: MyStateMachine
   Resources:
-    S3Bucketalxorwell:
+    S3BucketalmOrwellProcessing:
       Type: AWS::S3::Bucket
-      Properties:
-        BucketName: alm-orwell-processing
-
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
 
 plugins:
   - serverless-step-functions
